--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "mediasoup-client": "^3.7.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.3",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
