--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "mediasoup-client": "^3.7.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
