--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.3",
+    "simplebar-react": "^3.3.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
