--- a/client-v2/package.json
+++ b/client-v2/package.json
@@ -19,7 +19,8 @@
     "radix-ui": "^1.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "swiper": "^12.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
