--- a/client-v2/package.json
+++ b/client-v2/package.json
@@ -18,6 +18,7 @@
     "mobx-react-lite": "^4.1.0",
     "radix-ui": "^1.4.3",
     "react": "^18.3.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "socket.io-client": "^4.8.1",
     "swiper": "^12.0.2"
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/react": "^18.3.12",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-basic-ssl": "^2.1.0",
     "@vitejs/plugin-react": "^5.0.0",
