--- a/server-v2/tsconfig.json
+++ b/server-v2/tsconfig.json
@@ -6,6 +6,7 @@
     "strict": false,
     "outDir": "dist",
     "rootDir": "src",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "skipLibCheck": true
   }
 }
