--- a/client-v2/package.json
+++ b/client-v2/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "client-v2",
+  "name": "video-room",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
